RESOLVED FIXED231830
_WKRemoteWebInspectorViewController leaks an instance variable and should use a weak delegate
https://bugs.webkit.org/show_bug.cgi?id=231830
Summary _WKRemoteWebInspectorViewController leaks an instance variable and should use...
David Kilzer (:ddkilzer)
Reported 2021-10-15 14:06:43 PDT
_WKRemoteWebInspectorViewController leaks its instance variables and should use a weak delegate. Leaks found by clang static analyzer.
Attachments
Patch v1 (2.85 KB, patch)
2021-10-15 14:16 PDT, David Kilzer (:ddkilzer)
no flags
Patch v2 (2.81 KB, patch)
2021-10-15 14:29 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2021-10-15 14:07:02 PDT
David Kilzer (:ddkilzer)
Comment 2 2021-10-15 14:16:05 PDT
Created attachment 441426 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 3 2021-10-15 14:27:36 PDT
Comment on attachment 441426 [details] Patch v1 Oops, didn't see the implementation of -webView and -window.
David Kilzer (:ddkilzer)
Comment 4 2021-10-15 14:29:49 PDT
Created attachment 441428 [details] Patch v2
David Kilzer (:ddkilzer)
Comment 5 2021-10-16 20:37:58 PDT
Comment on attachment 441428 [details] Patch v2 Adding cq+ since api-gtk failures are unrelated.
EWS
Comment 6 2021-10-16 20:58:59 PDT
Committed r284329 (243124@main): <https://commits.webkit.org/243124@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441428 [details].
Note You need to log in before you can comment on or make changes to this bug.