_WKRemoteWebInspectorViewController leaks an instance variable and should use a weak delegate <https://webkit.org/b/231830> <rdar://problem/84316056>

Reviewed by Brent Fulgham.

* UIProcess/API/Cocoa/_WKRemoteWebInspectorViewController.h:
- Use a weak reference for the delegate.
* UIProcess/API/Cocoa/_WKRemoteWebInspectorViewController.mm:
(-[_WKRemoteWebInspectorViewController dealloc]): Add.
- Fix leak by releasing _configuration instance variable.


Canonical link: https://commits.webkit.org/243124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284329 268f45cc-cd09-0410-ab3c-d52691b4dbfc