Source/WebKit/UIProcess/API/Cocoa/_WKRemoteWebInspectorViewController.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 Apple Inc. All rights reserved.
+ * Copyright (C) 2016-2021 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -103,6 +103,12 @@ private:
     m_remoteInspectorProxy->setClient(m_remoteInspectorClient.get());
 
     return self;
+}
+
+- (void)dealloc
+{
+    [_configuration release];
+    [super dealloc];
 }
 
 - (NSWindow *)window
